--- a/src/main/resources/assets/gemstonemod/models/item/opalite_apple.json
+++ b/src/main/resources/assets/gemstonemod/models/item/opalite_apple.json
@@ -1,6 +1,7 @@
+
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "gemstonemod:item/saphirite_axe"
+    "layer0": "gemstonemod:item/opalite_apple"
   }
 }
